--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Dea</h1>
+    <h1>Ini Footer</h1>
     <footer>CopyRight 204</footer>
 </body>
 </html>
